<resources>
    <string name="app_name">UAS PDA</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_connect_server_fragment">ConnectServerFragment</string>
    
    <!--Connect Server Fragment-->
    <string name="text_fragment_serverconnect_title">仓储管理系统</string>
    <string name="hint_fragment_serverconnect_ip">请输入需要登录的服务器IP</string>
    <string name="hint_fragment_serverconnect_port">请输入端口</string>
    <string name="btn_fragment_serverconnect_submit">提 交</string>
    <string name="notice_serverconnect_ip_blank">请输入IP</string>
    <string name="notice_serverconnect_port_blank">请输入端口</string>
    <string name="notice_serverconnect_ip_error">IP填写错误！</string>
    <string name="notice_serverconnect_port_error">端口填写错误！</string>
    <string name="notice_serverconnect_connect_error">连接服务器失败！</string>

    <!--login-->
    <string name="text_fragment_login_title">登 录</string>
    <string name="hint_fragment_login_user">请输入登录账号</string>
    <string name="hint_fragment_login_pwd">请输入登录密码</string>
    <string name="chbx_fragment_login_remember">记住密码</string>
    <string name="btn_fragment_problem_login">无法登录？</string>
    <string name="notice_login_error">登录失败！</string>
    <string name="notice_login_user">请输入登录账号！</string>
    <string name="notice_login_pwd">请输入登录密码！</string>
    <string name="notice_login_master">无账套！</string>

    <!--Title-->
    <string name="title_fragment_inout">出入库管理</string>
    <string name="title_fragment_invoice">出入库单据</string>
    <string name="title_fragment_workhouse_index">车间管理</string>
    <string name="title_fragment_storage_index">仓库管理</string>
    <string name="title_fragment_setting_index">设置</string>
    <string name="title_fragment_collect_scmake">备料采集</string>
    <!--Root copy right-->
    <string name="text_fragment_chin_root">深圳市优软科技有限公司</string>
    <string name="text_fragment_eng_root">Copyright @ 2015 All Rights Reserved</string>
    <!--Main Menu-->
    <string name="title_activity_menu">UAS仓储管理系统</string>
    <string name="title_activity_function">FunctionActivity</string>
    <!--InMakeMaterial-->
    <string name="text_search_fragment_inmake">出入库单号</string>
    <string name="btn_search_fragment_inmake">搜索</string>
    <string name="hint_search_fragment_inmake">请输入出入库单号</string>
    <string name="note_search_fragment_inmake">没有对应的入库单</string>
    <string name="text_select_popwin_inmake">选择采购单</string>
    <string name="notice_recollect_popwin_inmake">确认重新采集，将会清空所有已采集数据包含已提交的数据</string>
    <!--ListViewRefresh-->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <!--SCmakePrepare-->
    <string name="hint_search_prepare_fragment_scmake">请输入备料单号</string>
    <string name="hint_search_makecode_fragment_scmake">请输入制造单号</string>
    <string name="hint_search_linecode_fragment_scmake">请输入产线线别</string>
    <string name="hint_search_collect_fragment_scmake">请采集料卷编号</string>
    <string name="btn_search_collect_fragment_scmake">确认</string>
    <string name="text_search_collect_fragment_scmake">提示</string>
    <string name="text_search_uncollect_fragment_scmake">待采集物料列表</string>
    <string name="notice_collected_fragment_scmake">当前物料已采集</string>
    <string name="hint_withdrawcollect_fragment_scmake">请采集要回退的料卷号</string>
    <string name="btn_withdrawall_fragment_scmake">点击回退该单全部备料</string>
</resources>
